--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,10 +1,43 @@
 .form {
+  font-family: sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin: 0;
 }
-.mainArticle {
+.formItem {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  width: 40%;
+}
+input,
+textarea {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+a {
   margin-bottom: 5px;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+}
+.btnForm {
+  display: flex;
+  flex-direction: row;
+  width: 40%;
+}
+.btn {
+  padding: 5px 10px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  border: 1px solid #777;
+  margin: 5px;
+  background-color: #777;
+  color: white;
+  font-size: small;
+  cursor: pointer;
 }
