--- a/views/add-article.ejs
+++ b/views/add-article.ejs
@@ -18,15 +18,28 @@
     </header>
     <main>
       <form class="form" action="/admin/add-article" method="POST">
-        <input class="title" type="text" name="title" id="title" />
-        <!-- <textarea
-          class="mainArticle"
-          name="article"
-          id="article"
-          cols="30"
-          rows="10"
-        ></textarea> -->
-        <button type="submit">Add article</button>
+        <div class="formItem">
+          <label for="title">Article Title</label>
+          <input type="text" name="title" id="title" />
+        </div>
+        <div class="formItem">
+          <label for="description">Description</label>
+          <textarea
+            name="description"
+            id="description"
+            cols="30"
+            rows="10"
+          ></textarea>
+        </div>
+        <div class="formItem">
+          <label for="author">Author</label>
+          <input type="text" name="author" id="author" />
+        </div>
+        <div class="formItem">
+          <label for="date">Date</label>
+          <input type="date" name="date" id="date" />
+        </div>
+        <button class="btn" type="submit">Add article</button>
       </form>
     </main>
   </body>
