--- a/views/article.ejs
+++ b/views/article.ejs
@@ -24,6 +24,7 @@
         <% for(let article of articles) { %>
         <h1><%= article.title %></h1>
         <p><%= article.description %></p>
+        <p><%= article.author %></p>
         <div class="btnForm">
           <a class="btn" href="/admin/edit-article/<%= article.id%>?edit=true"
             >Edit</a
