--- a/views/article.ejs
+++ b/views/article.ejs
@@ -25,6 +25,7 @@
         <h1><%= article.title %></h1>
         <p><%= article.description %></p>
         <p><%= article.author %></p>
+        <p><%= article.date %></p>
         <div class="btnForm">
           <a class="btn" href="/admin/edit-article/<%= article.id%>?edit=true"
             >Edit</a
